--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	font-size: small;
 }
 
-    </style></head><body><div id="wrapper" class="white"><div id="ribbon"><span><a href="http://www.awwwards.com/best-websites/thecybertouch-web-design-northern-ireland"><img class="auto-style1" width="115" height="115" alt="CSS Awards" src="http://www.thecssawards.com/imagenes/mail/honormention_black.png"></img></a></span></div><div class="absolute" style="top: 50%; left: 0; width:69px; height:164; z-index: 0;"><a target="_blank" href="http://www.cssdesignawards.com/search.php?search_term=thecybertouch&search=search"><img width="69" height="164" src="http://www.thecybertouch.co.uk/images/css-design-award-nominee-dark.png"></img></a></div><div id="header" class="container"><div id="logo"><h1><a href="http://www.thecybertouch.co.uk">
+    </style></head><body><div id="wrapper" class="white"><div id="ribbon"><span><img class="auto-style1" width="115" height="115"></img></a></span></div><div id="header" class="container"><div id="logo"><h1><a href="http://www.thecybertouch.co.uk">
       Web Design Northern Ireland, Magento Northern Ireland, Wordpress Northern Ireland and Ecommerce.
     </a></h1></div><div class="nav_bar"><ul><li><a class="home" href="javascript: void(0)">
       Home
